# autoresearch

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
prompts/: headless_codex_autoresearch_loop.md
scripts/: launch_headless_codex_loop_tmux.sh  run_headless_codex_supervisor.sh
src/autoresearch_vjepa/: __init__.py  boundary_labels.py  cache_contract.py  contracts.py  decode_start_end_pairs.py  dotenv.py  feature_store.py  interval_labels.py  label_conversion.py  losses.py  materialize.py  pooler.py  probe_phase1_reference.py  s3_videos.py  supabase.py
src/autoresearch_vjepa/models/: __init__.py  boundary_tcn.py
src/autoresearch_vjepa/vjepa/: __init__.py  extract.py  id_utils.py  preprocess.py  roi.py  runtime.py  types.py  video_reader.py  window_stream.py
tests/: test_prepare.py  test_train.py  test_video_reader.py
