[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "autoresearch-vjepa"
version = "0.1.0"
description = "Standalone V-JEPA dense-temporal autoresearch harness"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "boto3==1.42.44",
    "decord==0.6.0",
    "einops==0.8.2",
    "numpy==1.26.4",
    "opencv-python-headless==4.11.0.86",
    "pillow==10.4.0",
    "supabase==2.17.0",
    "timm==0.9.16",
    "torch==2.7.0",
    "torchvision==0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch_vjepa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
